// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gcs – roles next create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "180",
    "content-type": "application/json",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "DATA_TYPE": "role#1.0.0",
    "collection": "476a00e0-0255-4397-91cb-87d054aa494a",
    "principal": "urn:globus:auth:identity:dd7b1118-8fb0-4d92-9e28-7a3bc9cbfdf7",
    "role": "activity_manager",
  },
  "method": "POST",
  "url": "https://fa5e.bd7c.data.globus.org/api/roles",
}
`;

exports[`gcs – roles next get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/roles/some-uuid",
}
`;

exports[`gcs – roles next getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://fa5e.bd7c.data.globus.org/api/roles",
}
`;

exports[`gcs – roles next remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "fa5e.bd7c.data.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "DELETE",
  "url": "https://fa5e.bd7c.data.globus.org/api/roles/some-uuid",
}
`;
